@@ -1,12 +1,12 @@
 /*
  * Copyright 2000-2001,2004 The Apache Software Foundation.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-/* 
+/*
 
  */
 
@@ -58,7 +58,7 @@ public final class LoggerImpl implements Logger {
 
 	public void text(int logLevel, String loggingMethod, Throwable t,
 			String text, Object[] parms) {
-		//logger.log("text", org.apache.log4j.Level.ERROR, "isLogging return true with level " + logLevel, null); 
+		//logger.log("text", org.apache.log4j.Level.ERROR, "isLogging return true with level " + logLevel, null);
 
 		//determine log4j log level
 		org.apache.log4j.Level log4jLevel = determineLog4jLevel(logLevel);
@@ -129,7 +129,7 @@ public final class LoggerImpl implements Logger {
 	}
 
 	public void exit(int logLevel, String loggingMethod, boolean retValue) {
-		exit(logLevel, loggingMethod, new Boolean(retValue));
+		exit(logLevel, loggingMethod, Boolean.valueOf(retValue));
 	}
 
 	public void exit(int logLevel, String loggingMethod, Object retValue) {
